src/styles/components/content/sections/_contact-section.scss
.section-contact {
  margin-top: $metric-xl;
  width: 100vw;
  padding-bottom: $metric-xl;

  @include desktop {
    display: flex;
    flex-direction: column;
    align-items: start;
    max-width: 1500px;
    padding-left: 16%;
  }

  &__change-forms-btns-container {
    display: flex;
    justify-content: space-between;
    width: 90%;
    padding-left: $metric-s;
    padding-right: $metric-s;
    @include desktop {
      margin-top: $metric-xxl;
      max-width: 300px;
      align-self: center;
    }
  }
  &__contact-form-btn {
    @include tab;
    &--active {
      @include tab--active;
    }
  }
  &__form {
    padding-left: $metric-s;
    padding-right: $metric-s;
    margin-top: $metric-l;
    display: flex;
    flex-direction: column;
    @include desktop {
      width: 100%;
      align-items: center;
    }
  }
  &__zonifero-head {
    @include h4;
    margin-top: $metric-l;
    padding-bottom: $metric-m;
    padding-left: $metric-s;
  }
  &__zonifero-products-slider-wrapper {
    display: flex;
    align-items: center;
    padding: $metric-l $metric-s 0 $metric-s;
    background-color: $background_color;
  }
}

.form {
  &__label {
    @include label;
  }
  &__input-text {
    @include input;
  }
  &__message-container {
    @include desktop {
      width: 100%;
    }
  }
  &__submit-btn {
    position: relative;
    margin-top: $metric-m;
    @include button;
  }
}

#message {
  @include desktop {
    width: 100%;
    height: 50px;
  }
}

.zonifero-product-article {
  display: flex;
  align-items: center;
  flex-direction: column;
  height: 100%;
  &__small-headline {
    align-self: start;
    @include h2;
  }

  &__big-headline {
    align-self: start;
    color: $primary_color;
    @include h1;
  }
  &__description {
    padding-top: $metric-base;
    @include paragraph;
  }
  &__image {
    padding-top: $metric-base;
  }
}

